fixed reulsts spacing

--- a/css/main.css
+++ b/css/main.css
@@ -120,6 +120,7 @@ h1 {
 }
 
 #results-wrapper {
+    padding-top: 15vh;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
